PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2017 PHP 7.0.17

- Core:
  . Fixed bug #74084 (Out of bound read - zend_mm_alloc_small). (Laruence)
  . Fixed bug #73807 (Performance problem with processing large post request).
    (Nikita)
  . Fixed bug #73998 (array_key_exists fails on arrays created by
    get_object_vars). (mhagstrand)
  . Fixed bug #73954 (NAN check fails on Alpine Linux with musl). (Andrea)
  . Fixed bug #74039 (is_infinite(-INF) returns false). (Christian Schmidt)

- Apache:
  . Fixed bug #61471 (Incomplete POST does not timeout but is passed to PHP).
    (Zheng Shao)

- Date:
  . Fixed bug #72719 (Relative datetime format ignores weekday on sundays
    only). (Derick)
  . Fixed bug #73294 (DateTime wrong when date string is negative). (Derick)
  . Fixed bug #73489 (wrong timestamp when call setTimeZone multi times with
    UTC offset). (xiami, Derick)
  . Fixed bug #73858 (first/last day of' flag is not being reset). (Derick)
  . Fixed bug #73942 ($date->modify('Friday this week') doesn't return a Friday
    if $date is a Sunday). (Derick)
  . Fixed bug #74057 (wrong day when using "this week" in strtotime). (Derick)

- FPM:
  . Fixed bug #69860 (php-fpm process accounting is broken with keepalive).
    (Denis Yeldandi)

- GD:
  . Fixed bug #74031 (ReflectionFunction for imagepng is missing last two
    parameters). (finwe)

- Mysqlnd:
  . Fixed bug #74021 (fetch_array broken data. Data more then MEDIUMBLOB).
    (Andrew Nester, Nikita)

- Opcache:
  . Fixed bug #74019 (Segfault with list). (Laruence)

- OpenSSL:
  . Fixed bug #74022 (PHP Fast CGI crashes when reading from a pfx file).
    (Anatol)

- Reflection:
  . Fixed bug #74035 (getNumberOfRequiredParameters wrong for
    ReflectionClass::newInstance). (Andrew Nester)

- Standard:
  . Fixed bug #74005 (mail.add_x_header causes RFC-breaking lone line feed).
    (Anatol)